--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,9 @@ org.gradle.parallel=true
 spinnakerGradleVersion=8.10.1
 buildingInDocker=false
 targetJava11=true
-testContainersVersion=1.15.0
+testContainersVersion=1.15.1
+okHttpVersion=4.5.0
+resilience4jVersion=1.5.0
 
 # To enable a composite reference to a project, set the
 #  project property `'<projectName>Composite=true'`.
