--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -233,3 +233,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210114-verification-state-task-list.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210208-versioned-resources.yml
+      relativeToChangelogFile: true
