refactor(events): generate ref, application, and timestamp columns on event table
This means that the `ref` column will contain a resource id instead of the uid. This is actually considerably easier to deal with anyway.

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -236,3 +236,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210208-versioned-resources.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210226-generate-event-columns.yml
+      relativeToChangelogFile: true
