chore(database): clean up duplicate columns on event table

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -248,3 +248,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210305-embiggen-reason-column.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210302-drop-old-event-columns.yml
+      relativeToChangelogFile: true
