--- a/keel-sql/src/main/resources/db/changelog/202010303-baked-images.yml
+++ b/keel-sql/src/main/resources/db/changelog/202010303-baked-images.yml
@@ -7,40 +7,61 @@ databaseChangeLog:
             tableName: baked_images
             columns:
               - column:
-                  name: package_version
-                  type: varchar(150)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: cloud_provider
-                  type: varchar(50)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: base_os
-                  type: varchar(50)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: base_label
-                  type: varchar(50)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: time_detected
-                  type: timestamp
-                  constraints:
-                    nullable: false
-              - column:
                   name: image
                   type: json
                   constraints:
-                    nullable: true
+                    nullable: false
         - modifySql:
             dbms: mysql
             append:
               value: " engine innodb"
+  - changeSet:
+      id: add-baked-images-generated-columns
+      author: emjburns
+      changes:
+        - sql:
+            sql: |
+              alter table baked_images
+              add column package_version varchar(150) generated always as (image ->> '$.packageVersion')
+              not null
+              first;
+        - sql:
+            sql: |
+              alter table baked_images
+              add column cloud_provider varchar(150) generated always as (image ->> '$.cloudProvider')
+              not null
+              after package_version;
+        - sql:
+            sql: |
+              alter table baked_images
+              add column base_label varchar(150) generated always as (image ->> '$.baseLabel')
+              not null
+              after cloud_provider;
+        - sql:
+            sql: |
+              alter table baked_images
+              add column base_os varchar(150) generated always as (image ->> '$.baseOs')
+              not null
+              after base_label;
+        - sql:
+            sql: |
+              alter table baked_images
+              add column time_detected datetime(3) generated always as (str_to_date(image->>'$.timestamp', '%Y-%m-%dT%T.%fZ'))
+              after base_os;
+  - changeSet:
+      id: create-baked-image-indicies
+      author: emjburns
+      changes:
+        - createIndex:
+            tableName: baked_images
+            indexName: baked_images_primary_idx
+            unique: true
+            columns:
+              - column:
+                  name: package_version
+              - column:
+                  name: cloud_provider
+              - column:
+                  name: base_os
+              - column:
+                  name: base_label
