fix(tests): Fix tests

--- a/keel-web/src/test/resources/examples/titus-cluster-with-test-container.yml
+++ b/keel-web/src/test/resources/examples/titus-cluster-with-test-container.yml
@@ -4,6 +4,9 @@ artifacts:
   - name: rocketskates
     type: docker
     reference: rocketskates
+    from:
+      branch:
+        name: main
 environments:
   - name: test
     locations:
