fix(database): veto comment can be longer than 255 characters

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -245,3 +245,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210305-fix-artifacts.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210305-embiggen-reason-column.yml
+      relativeToChangelogFile: true
