fix(pr): add link to json if no commit data

--- a/keel-ec2-plugin/src/test/resources/application.properties
+++ b/keel-ec2-plugin/src/test/resources/application.properties
@@ -8,6 +8,7 @@ front50.baseUrl=https://localhost:8082
 igor.baseUrl=https://localhost:8083
 echo.baseUrl=https://localhost:8086
 spinnaker.baseUrl=http://spinnaker
+spinnaker.baseApiUrl=http://spinnaker-api
 services.fiat.baseUrl=https://fiat.net
 spring.application.name=keel
 sql.enabled=true
