--- a/keel-web/src/test/resources/application.properties
+++ b/keel-web/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 scheduling.enabled=false
 spinnaker.baseUrl=https://spinnaker
+spinnaker.baseApiUrl=https://spinnaker-api
 eureka.defaultToUp=false
 clouddriver.enabled=true
 clouddriver.baseUrl=http://localhost:8080
