fix(constraints): require artifact reference in constraint state

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -251,3 +251,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210302-drop-old-event-columns.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210316-update-env-artifact-constr.yml
+      relativeToChangelogFile: true
