fix(pr): renaming unique constraint to not have pk in it

--- a/keel-sql/src/main/resources/db/changelog/20210316-update-env-artifact-constr.yml
+++ b/keel-sql/src/main/resources/db/changelog/20210316-update-env-artifact-constr.yml
@@ -24,5 +24,5 @@ databaseChangeLog:
             uniqueColumns: environment_uid, type, artifact_version
         - addUniqueConstraint:
             tableName: environment_artifact_constraint
-            constraintName: constraint_pk
+            constraintName: constraint_unique
             columnNames: environment_uid, type, artifact_version, artifact_reference
