fix(verif): use env lease to address race condition
Introduce environment leases to prevent concurrent verificaitons or
verifications concurrent with deployments.

See new docs for details.

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -266,3 +266,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210331-fix-resource-with-metadata-view.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210331-add-environment-lease-repository.yml
+      relativeToChangelogFile: true
