feat(verif): provide verification link in API
Support for adding a link associated with a test container verification.

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -278,3 +278,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210409-add-version-timestamps.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210409-add-verif-link-column.yml
+      relativeToChangelogFile: true
