refactor(environment): move constraints, verifications, notifications from environment to environment_version
(cherry picked from commit af7e2e5f23cf86150b8ec9764f40a9432feb1c81)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -281,3 +281,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210409-add-verif-link-column.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210413-environment-features-per-version.yml
+      relativeToChangelogFile: true
