--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -287,3 +287,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210419-actually-no-environment-features-per-version.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210415-preview-environment.yml
+      relativeToChangelogFile: true
