--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -284,3 +284,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210413-environment-features-per-version.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210419-actually-no-environment-features-per-version.yml
+      relativeToChangelogFile: true
