fix(build): ensure keel is built with spinnaker buildtool

--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -17,6 +17,5 @@ RUN usermod -d /var/lib/mysql/ mysql && \
     mysql -u root --password=sa -e "GRANT PROXY ON ''@'' TO 'root'@'%' WITH GRANT OPTION;" && \
     /etc/init.d/mysql restart && \
     mysql -u root --password=sa -e 'CREATE DATABASE `keel` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;'
-
-CMD /etc/init.d/mysql restart && \
-    ./gradlew --no-daemon -PbuildingInDocker=true keel-web:installDist -x test
+ADD build-scripts/entrypoint.sh /usr/bin/
+ENTRYPOINT ["/usr/bin/entrypoint.sh"]
