--- a/keel-web/src/test/resources/application.properties
+++ b/keel-web/src/test/resources/application.properties
@@ -6,6 +6,7 @@ clouddriver.enabled=true
 clouddriver.baseUrl=http://localhost:8080
 orca.enabled=true
 orca.baseUrl=https://localhost:8081
+front50.enabled=true
 front50.baseUrl=https://localhost:8082
 igor.baseUrl=https://localhost:8083
 echo.baseUrl=https://localhost:8086
