chore(build): Migrate keel to netflixplatform / SBN
Squashed commit of the following:

commit 7b5ebee9cfcc369960163b4b0b7534693312dc44
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed May 19 13:07:55 2021 -0700

    fix(pr): Address review feedback

commit 2689616d38463461e807b1a68f53106926705207
Author: Luis Pollo <lpollo@netflix.com>
Date:   Tue May 18 19:56:58 2021 -0700

    chore(build): Migrate to netflixplatform

commit 88077e6ff207e7cec99af8d402176321f99a0fbd
Author: Luis Pollo <lpollo@netflix.com>
Date:   Tue May 18 16:57:51 2021 -0700

    chore(build): Fully enable Nebula

(cherry picked from commit 34e830469b1099207d80265ffa886615efa37abc)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,15 @@
+kotlinVersion=1.4.32
 fiatVersion=1.27.0
+korkVersion=7.105.0
 kapt.use.worker.api=true
-korkVersion=7.108.0
 liquibaseTaskPrefix=liquibase
 org.gradle.parallel=true
-spinnakerGradleVersion=8.11.0
-buildingInDocker=false
-targetJava11=true
 testContainersVersion=1.15.3
 okHttpVersion=4.5.0
 resilience4jVersion=1.5.0
+
+# Used to control whether to spin up docker to run liquibase before jooq
+buildingInDocker=false
 
 # To enable a composite reference to a project, set the
 #  project property `'<projectName>Composite=true'`.
