--- a/keel-bom/keel-bom.gradle
+++ b/keel-bom/keel-bom.gradle
@@ -1,5 +1,5 @@
 plugins {
-  `java-platform`
+  id "java-platform"
 }
 
 javaPlatform {
@@ -7,10 +7,11 @@ javaPlatform {
 }
 
 dependencies {
-  api(platform("io.spinnaker.kork:kork-bom:${property("korkVersion")}"))
+  api(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
   constraints {
     rootProject
       .subprojects
+      .stream()
       .filter { it != project }
       .forEach { api(project(it.path)) }
   }
