--- a/keel-api/keel-api.gradle
+++ b/keel-api/keel-api.gradle
@@ -1,7 +1,3 @@
-plugins {
-  `java-library`
-}
-
 /*
  * DO NOT ADD ANY NON-TEST DEPENDENCIES HERE!
  *
@@ -10,8 +6,8 @@ plugins {
  * dependencies along for the ride -- ideally nothing at all.
  */
 dependencies {
-  api("io.spinnaker.kork:kork-plugins-api:${property("korkVersion")}")
-  api("io.spinnaker.kork:kork-exceptions:${property("korkVersion")}")
+  api("io.spinnaker.kork:kork-plugins-api")
+  api("io.spinnaker.kork:kork-exceptions")
   api("de.huxhorn.sulky:de.huxhorn.sulky.ulid")
   testImplementation("io.strikt:strikt-core")
   testImplementation("dev.minutest:minutest")
