--- a/keel-cli/keel-cli.gradle
+++ b/keel-cli/keel-cli.gradle
@@ -1,21 +1,8 @@
-plugins {
-  `java-library`
-  id("kotlin-spring")
-  application
-}
-
-sourceSets {
-  main {
-    dependencies {
-      implementation("org.jetbrains.kotlinx:kotlinx-cli:0.3")
-    }
-  }
-}
-
 dependencies {
   implementation(project(":keel-core"))
   implementation(project(":keel-sql"))
   implementation(project(":keel-ec2-plugin"))
+  implementation("org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3.2")
   implementation("org.springframework.boot:spring-boot-starter")
   implementation("org.springframework.boot:spring-boot-autoconfigure")
 }
