--- a/keel-docker/keel-docker.gradle
+++ b/keel-docker/keel-docker.gradle
@@ -1,15 +1,10 @@
-plugins {
-  `java-library`
-  id("kotlin-spring")
-}
-
 dependencies {
   implementation(project(":keel-core"))
   implementation(project(":keel-igor"))
-  implementation(project(":keel-clouddriver"))
   implementation("org.springframework:spring-context")
-  implementation("io.spinnaker.kork:kork-artifacts")
+  implementation("net.swiftzer.semver:semver:1.1.0")
+
+  implementation(project(":keel-test"))
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
-  testImplementation(project(":keel-test"))
 }
