fix(verifications): make verification id unique even if the same image is used in multiple verifications
(cherry picked from commit 413177e98b98c2fd168765ed50a6d3a8b9bb1f4a)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -314,3 +314,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210505-environment-is-preview.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210525-migrate-verification-ids.yaml
+      relativeToChangelogFile: true
