chore(verifications): tidy up older deprecated properties on TestContainerVerification
(cherry picked from commit dcc6a2a37fa406defdf5018785e1c57b8b8da39a)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -317,3 +317,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210525-migrate-verification-ids.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210526-remove-deprecated-verification-fields.yaml
+      relativeToChangelogFile: true
