--- a/keel-scm/keel-scm.gradle
+++ b/keel-scm/keel-scm.gradle
@@ -7,4 +7,5 @@ dependencies {
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-test"))
+  testImplementation(project(":keel-core-test"))
 }
