--- a/keel-retrofit/keel-retrofit.gradle
+++ b/keel-retrofit/keel-retrofit.gradle
@@ -8,4 +8,8 @@ dependencies {
   implementation("com.squareup.okhttp3:logging-interceptor")
   implementation("io.spinnaker.fiat:fiat-api:${fiatVersion}")
   implementation("io.spinnaker.fiat:fiat-core:${fiatVersion}")
+
+  testImplementation("com.squareup.okhttp3:mockwebserver")
+  testImplementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+  testImplementation("io.strikt:strikt-core")
 }
