--- a/keel-scm/keel-scm.gradle
+++ b/keel-scm/keel-scm.gradle
@@ -8,4 +8,5 @@ dependencies {
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-test"))
   testImplementation(project(":keel-core-test"))
+  testImplementation(project(":keel-titus-plugin"))
 }
