feat(versioning): decouple latest_environment from it actually being the max version
(cherry picked from commit da9c18dcf3ece936c5dd50495d70dd9ee94de40a)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -320,3 +320,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210526-remove-deprecated-verification-fields.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210604-desired-environment-version.yaml
+      relativeToChangelogFile: true
