chore(versioning): rename latest_environment to active_environment and fix resource_with_metadata view
(cherry picked from commit 328fc54e6ba43a5af21cda83dc1fcc428aed645a)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -323,3 +323,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210604-desired-environment-version.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210607-rename-active-environment-view.yml
+      relativeToChangelogFile: true
