feat(preview-environments): Add Stash PR notifications
Squashed commit of the following:

commit 9cb0bd96f97d2b3ec8432f0f46206935a4005652
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 10 10:33:09 2021 -0700

    fix(test): Fix broken test

commit 9cee88801dbb3afbb3030bb3bc634c492697fee1
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 10 10:26:04 2021 -0700

    chore(pr): Update Stash comment text per feedback

commit a14e12fc4fdbfb5965f17f585ce143aede0fba9c
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 10 10:15:39 2021 -0700

    fix(pr): Undo unnecessary dependency update

commit e9a14aeb5ea427c0d38e185bac14ed0b4d1e38e2
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 9 18:58:10 2021 -0700

    fix(pr): Fix test

commit 99787708df4819e32dad655909530e10beaa18c0
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 9 18:57:10 2021 -0700

    chore(code): Reorganize code tree under keel-notifications

commit 0fbce9479a5cf6de0f1045c9ff8b6d93d6b3a6aa
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 9 18:51:45 2021 -0700

    chore(code): Rename keel-slack to keel-notifications

commit a8a4dfc66a831f816ebdeb156cd17c56f0f19aef
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 9 15:06:01 2021 -0700

    feat(preview-environments): Add Stash PR notifications

(cherry picked from commit 0fd596abbb944fb572ce2e72d6c853a3c5a3de60)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -326,3 +326,9 @@ databaseChangeLog:
   - include:
       file: changelog/20210607-rename-active-environment-view.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210609-add-timestamp-to-active-environment.yml
+      relativeToChangelogFile: true
+  - include:
+      file: changelog/20210609-add-metadata-to-environment.yml
+      relativeToChangelogFile: true
