--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -23,7 +23,7 @@ dependencies {
   api(project(":keel-echo"))
   api(project(":keel-igor"))
   api(project(":keel-lemur"))
-  api(project(":keel-slack"))
+  api(project(":keel-notifications"))
 
   implementation(project(":keel-bakery-plugin"))
   implementation(project(":keel-ec2-plugin"))
