feat(preview-environments): Add DNS endpoints to PR comments
Squashed commit of the following:

commit 10134472dccb35bedf04b4823ce5474b4e7d82a4
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 10 18:07:52 2021 -0700

    feat(preview-environments): Add DNS endpoints to PR comments

(cherry picked from commit 047c063b36f7dc5dc62dfa3d3f414df7af6c6fe8)

--- a/keel-notifications/keel-notifications.gradle
+++ b/keel-notifications/keel-notifications.gradle
@@ -3,6 +3,7 @@ dependencies {
   implementation(project(":keel-core"))
   implementation(project(":keel-igor"))
   implementation(project(":keel-front50"))
+  implementation(project(":keel-network"))
   implementation("org.springframework.boot:spring-boot-autoconfigure")
 
   implementation("com.slack.api:slack-api-model-kotlin-extension:1.4.1")
