--- a/settings.gradle
+++ b/settings.gradle
@@ -40,13 +40,14 @@ include(
   "keel-front50",
   "keel-igor",
   "keel-lemur",
+  "keel-network",
+  "keel-notifications",
   "keel-orca",
   "keel-retrofit",
   "keel-retrofit-test-support",
   "keel-schema-generator",
   "keel-scm",
   "keel-spring-test-support",
-  "keel-notifications",
   "keel-sql",
   "keel-test",
   "keel-titus-api",
