--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -16,8 +16,9 @@ dependencies {
   api("com.github.ben-manes.caffeine:caffeine")
 
   implementation("org.springframework:spring-tx")
-  implementation ("io.github.resilience4j:resilience4j-kotlin")
-  implementation ("io.github.resilience4j:resilience4j-retry")
+  implementation("org.springframework:spring-web")
+  implementation("io.github.resilience4j:resilience4j-kotlin")
+  implementation("io.github.resilience4j:resilience4j-retry")
   implementation("com.newrelic.agent.java:newrelic-api:6.1.0")
   implementation("io.spinnaker.kork:kork-plugins")
 
