fix(backfil): save enough data to backfil artifacts, fix query, /admin to /poweruser
Squashed commit of the following:

commit df28770052e3dcfe90792fe862a3941b38c9f688
Author: Emily Burns <emburns@netflix.com>
Date:   Mon Jun 14 17:01:20 2021 -0700

    fix(backfil): save enough data to backfil artifacts, fix query

(cherry picked from commit 6d9e00c4d3b1efb3dde4cbabb5adc930f8a6e85d)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -332,3 +332,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210609-add-metadata-to-environment.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210614-store-original-artifact.yml
+      relativeToChangelogFile: true
