feat(pause): add reason for pausing
Squashed commit of the following:

commit 5b462d7c622e7a4ee78bf5ac1050c92e3ea08793
Author: Emily Burns <emburns@netflix.com>
Date:   Fri Jun 11 16:12:37 2021 -0700

    feat(pause): add reason for pausing

(cherry picked from commit 28f58290d578ad250ca708cbb83b52fef315d9ab)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -335,3 +335,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210614-store-original-artifact.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210611-give-pause-a-reason.yml
+      relativeToChangelogFile: true
