feat(notifications): Add MdNotification to the GraphQL API + delivery config import failed notification
Squashed commit of the following:

commit 483cc50de686478eeacae7fa0cdfa8ba01a0fece
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 10:48:31 2021 -0700

    fix(pr): Add missing indices, fix test

commit b21d781b3cc304fccf7a48a5192918c56b6af4f1
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 09:10:42 2021 -0700

    fix(notifications): Fixed GraphQL model

commit 4da9436f44f76889fbdd984726b47c166f98aa5c
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 08:52:09 2021 -0700

    feat(notifications): Add dismissedAt timestamp + renames

commit 184f2eec351190d7e65017d5577ff326edc5d801
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 08:32:19 2021 -0700

    chore(log): Add logging around dismissible notifications

commit 8507f476b4d3c59a609d871ae19199d20a67c778
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 08:27:59 2021 -0700

    fix(pr): Make SqlDismissibleNotificationRepository a @Bean

commit 2dd5a946ee09cbd38d045bd00d8c43b8d0b8ec6f
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 08:04:39 2021 -0700

    chore(pr): More minor tweaks

commit b16a95c6c318b1b0064a5d9c791aa72a209d42f7
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 07:50:14 2021 -0700

    chore(pr): Minor tweaks

commit ebc430c5524fe7e676ed659dafeeac0d128eed07
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 17 07:39:25 2021 -0700

    fix(pr): Revert unrelated changes

commit 0d0c35594f5bb0cd0b99b18a492e4d3dbb7f8d5c
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 16 22:13:07 2021 -0700

    feat(scm): Generate dismissable notification for delivery config import failure

commit 5340fcc79e0cf6ad0c57c6980717554f0c281a94
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 16 22:12:42 2021 -0700

    feat(notifications): Add GraphQL support for dismissable notifications

commit 9a23bde5e499da3d658e98c34d298f9b22

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -338,3 +338,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210611-give-pause-a-reason.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210616-create-dismissible-notifications.yml
+      relativeToChangelogFile: true
