--- a/keel-titus-plugin/keel-titus-plugin.gradle
+++ b/keel-titus-plugin/keel-titus-plugin.gradle
@@ -7,6 +7,7 @@ dependencies {
   implementation(project(":keel-retrofit"))
   implementation(project(":keel-docker"))
   implementation(project(":keel-artifact"))
+  implementation(project(":keel-network"))
   implementation("io.spinnaker.kork:kork-core")
   implementation("io.spinnaker.kork:kork-web")
   implementation("org.springframework:spring-context")
