feat(preview-environments): Handle environment destruction on PR finished (part 1)
Squashed commit of the following:

commit f92a2b55f59cb5462429a909934dd8cfa8392da9
Author: Luis Pollo <lpollo@netflix.com>
Date:   Fri Jun 25 15:19:33 2021 -0700

    fix(pr): Address review feedback

commit 6003a68dd35e4555d985a280aa0e3c28c63584be
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jun 24 11:51:04 2021 -0700

    feat(preview-environments): Handle environment destruction on PR finished (part 1)

(cherry picked from commit 45f5e61401e46175482f926fdffb057355bb3595)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -341,3 +341,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210616-create-dismissible-notifications.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210622-add-environment-deletion-table.yml
+      relativeToChangelogFile: true
