fix(keel-web): rename keel-web -> keel
this name change happened when switch to
groovy-based gradle was made. keel-web reaks creating
the docker image for keel.

also apply the packaging for springboot configuration
location to populate properly in the run script

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 apply(plugin: "com.netflix.dgs.codegen")
+apply(plugin: "io.spinnaker.package")
 
 repositories {
   mavenCentral() // for graphql-java-extended-scalars
@@ -68,4 +69,5 @@ dependencies {
 
 application {
   mainClassName = "com.netflix.spinnaker.keel.MainKt"
+  applicationName("keel")
 }
