feat(preview-environments): Preview environment resource deletion
Squashed commit of the following:

commit a4f748be30b0dee72b9eeb3c5dbe6ba4cd031046
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Jul 1 13:03:32 2021 -0500

    fix(pr): Address review feedback

commit 1cd435fea248e1ec654159f26c067a7c8854a99b
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Jun 30 15:21:21 2021 +0000

    fix(pr): Fix typo in test description

commit f452f0e7528df2a26b44c0269594418162f96d09
Author: Luis Pollo <lpollo@netflix.com>
Date:   Mon Jun 28 19:00:50 2021 -0700

    feat(preview-environments): Preview environment resource deletion

(cherry picked from commit a543f35b4b953087e35779c0611946b307bbf294)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -344,3 +344,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210622-add-environment-deletion-table.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210628-add-attempted-deletions-to-resource.yml
+      relativeToChangelogFile: true
