--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -21,9 +21,12 @@ dependencies {
   implementation("io.github.resilience4j:resilience4j-retry")
   implementation("com.newrelic.agent.java:newrelic-api:6.1.0")
   implementation("io.spinnaker.kork:kork-plugins")
+  implementation("org.jgrapht:jgrapht-core:1.5.1")
+  implementation(project(":keel-ec2-api"))  // needed for resource dependency logic
 
   testImplementation(project(":keel-test"))
   testImplementation(project(":keel-core-test"))
+  testImplementation(project(":keel-ec2-api"))  // needed for resource dependency logic
   testImplementation("io.strikt:strikt-jackson")
   testImplementation("dev.minutest:minutest")
 
