--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -347,3 +347,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210628-add-attempted-deletions-to-resource.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210630-add-event-processing-queue.yml
+      relativeToChangelogFile: true
