feat(admin): Add API to force refresh of application cache
(cherry picked from commit 91d97fba86d0c8dd3632262c60314a3154b45a41)

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -25,6 +25,7 @@ dependencies {
   api(project(":keel-igor"))
   api(project(":keel-lemur"))
   api(project(":keel-notifications"))
+  api(project(":keel-front50"))
 
   implementation(project(":keel-bakery-plugin"))
   implementation(project(":keel-ec2-plugin"))
