fix(pr): pin package to a version
Pin the io.spinnaker.package plugin to a specific version.

Otherwise, we get a build error that gradle can't find the plugin.

(cherry picked from commit 73eb1b7a0db3c53c0024894b9b4347062d58624a)

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -1,9 +1,9 @@
 plugins {
   id("application")
+  id "io.spinnaker.package" version "8.12.0"
 }
 
 apply(plugin: "com.netflix.dgs.codegen")
-apply(plugin: "io.spinnaker.package")
 
 repositories {
   mavenCentral() // for graphql-java-extended-scalars
