--- a/keel-clouddriver/keel-clouddriver.gradle
+++ b/keel-clouddriver/keel-clouddriver.gradle
@@ -15,6 +15,7 @@ dependencies {
   testImplementation("com.squareup.okhttp3:mockwebserver")
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
+  testImplementation(project(":keel-spring-test-support"))
 
   runtime("org.jetbrains.kotlin:kotlin-reflect")
 }
