feat(core): Store the raw delivery config in DB
Squashed commit of the following:

commit ace4915483155d0694cdd64bdfa59d5756a639a5
Author: Rani <rhorev@netflix.com>
Date:   Mon Jul 26 16:29:33 2021 -0700

    fix(pr): remove the old upsert and keep only the new one

commit 1d819cfb8b1f27c74047b92284c2ce878e09ec11
Author: Rani <rhorev@netflix.com>
Date:   Thu Jul 22 17:47:32 2021 -0700

    fix(pr): fix igor request return type

commit c0d9e0230bc05d21f5dbf61b20e6d137c1cb4945
Author: Rani <rhorev@netflix.com>
Date:   Thu Jul 22 11:17:30 2021 -0700

    fix(pr): cleanup

commit d4cefbc6a8b83da3a994df268d94532743c926b1
Author: Rani <rhorev@netflix.com>
Date:   Wed Jul 21 15:34:51 2021 -0700

    feat(dgs): added rawConfig field to application

commit 277749416b8d360bd717b63abab95abeba2cab14
Author: Rani <rhorev@netflix.com>
Date:   Wed Jul 21 13:40:28 2021 -0700

    fix(pr): replaced var with val

commit a05a36638d692bdbd7e9ac08fbaf7495634e69e1
Author: Rani <rhorev@netflix.com>
Date:   Wed Jul 21 13:39:50 2021 -0700

    feat(igor): update the import call to use the raw delivery config

commit ea01a980b837d9c57ee406ff119a0b59479371b8
Author: Rani <rhorev@netflix.com>
Date:   Mon Jul 19 21:33:40 2021 -0700

    feat(web): read raw delivery config and parse it

commit 407059f2c6d407ee829e72b3b0913fb775182482
Author: Rani <rhorev@netflix.com>
Date:   Mon Jul 19 15:56:32 2021 -0700

    feat(core): store the raw delivery config in DB

commit 19012546600d8c376af27114bc9035ba3887da5d
Author: Rani <rhorev@netflix.com>
Date:   Mon Jul 19 15:54:30 2021 -0700

    feat(sql): added raw delivery config column

(cherry picked from commit 53dd1b5db00f721fe226348c6cf0216088b45dbe)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -350,3 +350,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210630-add-event-processing-queue.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210716-add-raw-delivery-config.yml
+      relativeToChangelogFile: true
