feat(config): auto dismissal of delivery config notifications
Squashed commit of the following:

commit 70a96452c48d57363bda85870cbb2c3f6b1960ae
Author: Rani <rhorev@netflix.com>
Date:   Thu Aug 5 09:16:05 2021 -0700

    fix(pr): fixed tests

commit 28b6bbd6fa9c76f25c3ed23c122944647ec76c1b
Author: Rani <rhorev@netflix.com>
Date:   Wed Aug 4 17:42:12 2021 -0700

    fix(pr): make the every call more specific to ensure that we're dismissing the right notification

commit 639064be597f2c5d75327cc43115efc1b6ab8659
Author: Rani <rhorev@netflix.com>
Date:   Wed Aug 4 17:35:17 2021 -0700

    fix(pr): always store the git branch

commit b7e3e8349e0cc5ecf96b7ecccf140291d59bdf96
Author: Rani <rhorev@netflix.com>
Date:   Wed Aug 4 17:28:39 2021 -0700

    fix(pr): remove the dismiss call from the controller

commit c458931680c5759de0eb0c52f6507910e1e9c4e1
Author: Rani <rhorev@netflix.com>
Date:   Wed Aug 4 14:59:06 2021 -0700

    fix(pr): add a new branch column and filter by it. Improve the query accordingly

commit ce6c5805312de9bb5c2d88273e50a483bb9cd297
Author: Rani <rhorev@netflix.com>
Date:   Tue Aug 3 19:32:38 2021 -0700

    feat(config): auto dismiss of delivery config notifications

(cherry picked from commit 625b357a00d92ff56dd4cfea4b74f5b756dbc70c)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -353,3 +353,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210716-add-raw-delivery-config.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210804-add-branch-to-dismissible-notifications.yml
+      relativeToChangelogFile: true
