fix(mj): add auth to slack callback for judgement
Squashed commit of the following:

commit ad7d0abf591798dcc4163a9e9c0d10c6f2a17f39
Author: Emily Burns <emburns@netflix.com>
Date:   Fri Aug 6 09:50:08 2021 -0700

    fix(PR): renames and some tests

commit c0330749bbe5d36484ff6618854d3a0272ddf309
Author: Emily Burns <emburns@netflix.com>
Date:   Thu Aug 5 13:55:13 2021 -0700

    fix(mj): add auth to slack callback for judgement

(cherry picked from commit e80a7b259671ffdd308eedef214cc30e94b37f0f)

--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -22,6 +22,9 @@ dependencies {
   implementation("com.newrelic.agent.java:newrelic-api:6.1.0")
   implementation("io.spinnaker.kork:kork-plugins")
   implementation("org.jgrapht:jgrapht-core:1.5.1")
+  implementation("io.spinnaker.kork:kork-web")
+  implementation("io.spinnaker.fiat:fiat-api:${fiatVersion}")
+  implementation("io.spinnaker.fiat:fiat-core:${fiatVersion}")
   implementation(project(":keel-ec2-api"))  // needed for resource dependency logic
 
   testImplementation(project(":keel-test"))
