--- a/keel-scm/keel-scm.gradle
+++ b/keel-scm/keel-scm.gradle
@@ -4,6 +4,7 @@ dependencies {
   implementation(project(":keel-front50"))
   implementation(project(":keel-retrofit"))
   implementation(project(":keel-titus-api"))
+  implementation("commons-codec:commons-codec")
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-test"))
