feat(imdsv2): controlled and instumented rollout of IMDSv2
(cherry picked from commit cf796a4461767badabfc6e75cc0776a8144d2e57)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -368,3 +368,6 @@ databaseChangeLog:
 - include:
     file: changelog/20210909-task-tracking-resource-and-environment.yml
     relativeToChangelogFile: true
+- include:
+    file: changelog/20210917-feature-rollout-table.yml
+    relativeToChangelogFile: true
