fix(api): Account for UnparseableResponseException in exception handler
Squashed commit of the following:

commit 1d23d0da48fd7b4fdab17f38d349f8b84e2697e7
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Aug 18 10:44:06 2021 -0700

    fix(api): Account for UnparseableResponseException in exception handler

(cherry picked from commit 9a8efc0ec76b446a5f8ffa128c300c050942b49b)

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -32,6 +32,7 @@ dependencies {
   implementation(project(":keel-titus-plugin"))
   implementation(project(":keel-schema-generator"))
   implementation(project(":keel-scm"))
+  implementation(project(":keel-retrofit"))
 
   implementation("io.spinnaker.kork:kork-web")
   implementation("io.spinnaker.kork:kork-artifacts")
