feat(tasks): track tasks we launch longer term
(cherry picked from commit 48d9430d6a0a8209f4cced4c2e839e70db6d02c5)

--- a/keel-sql/keel-sql.gradle
+++ b/keel-sql/keel-sql.gradle
@@ -204,6 +204,16 @@ jooq {
                 enumConverter = true
                 includeExpression = "RESOURCE_LAST_CHECKED.STATUS"
               }
+              forcedType {
+                userType = "com.netflix.spinnaker.keel.api.TaskStatus"
+                enumConverter = true
+                includeExpression = "TASK_TRACKING.STATUS"
+              }
+              forcedType {
+                userType = "com.netflix.spinnaker.keel.api.actuation.SubjectType"
+                enumConverter = true
+                includeExpression = "TASK_TRACKING.SUBJECT_TYPE"
+              }
             }
           }
           target {
